--- a/scene/css/tooplate-style.css
+++ b/scene/css/tooplate-style.css
@@ -266,7 +266,7 @@ a:hover, a:active, a:focus {
 }
 
 .custom-navbar .navbar-brand {
-  color: #f9f9f9;
+  color: #8fb300;
   font-weight: normal;
   font-size: 25px;
 }
