--- a/scene/css/tooplate-style.css
+++ b/scene/css/tooplate-style.css
@@ -152,7 +152,7 @@ html{
 }
 
 a {
-  color: #4d63c4;
+  color: #8fb300;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
@@ -274,7 +274,7 @@ a:hover, a:active, a:focus {
 .custom-navbar .nav li a {
   font-size: 14px;
   font-weight: normal;
-  color: #f9f9f9;
+  color: #8fb300;
   letter-spacing: 0.5px;
   -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
