--- a/scene/css/tooplate-style.css
+++ b/scene/css/tooplate-style.css
@@ -274,7 +274,7 @@ a:hover, a:active, a:focus {
 .custom-navbar .nav li a {
   font-size: 14px;
   font-weight: normal;
-  color: #8fb300;
+  color: #ffffff;
   letter-spacing: 0.5px;
   -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
