--- a/scene/css/tooplate-style.css
+++ b/scene/css/tooplate-style.css
@@ -331,7 +331,7 @@ a:hover, a:active, a:focus {
     background: 0 0; 
   }
   .custom-navbar.top-nav-collapse {
-    background: #8fb300;
+    background: #FFFFFF;
     padding: 15px 0;
   }
 }
